--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "morgan": "^1.10.0",
     "prompt-sync": "^4.2.0"
