--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.0.0",
     "morgan": "^1.10.0",
-    "prompt-sync": "^4.2.0"
+    "prompt-sync": "^4.2.0",
+    "ws": "^8.14.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
